fixed mobile nav and homepage columns on mobile

--- a/vanillacss/styles.css
+++ b/vanillacss/styles.css
@@ -741,7 +741,7 @@ body.home .topbar-outer.dark {
 	top: 59px;
 	left: 0px;
 	width: 100%;
-	background-color: #ffffff;
+	background-color: #0e1033;
 	padding: 0 18px 0 18px;
 	border-bottom:1px solid #dadada;
 	-moz-box-shadow: 0 8px 10px -6px rgba(0, 0, 0, 0.15);
@@ -755,7 +755,7 @@ body.home .topbar-outer.dark {
 	border-top: 0;
 }
 .mobilenav li a {
-	color: #0e1033;
+	color: #e2e2e2;
 	display: block;
 	padding: 16px 0;
 	font-weight: 500;
@@ -783,13 +783,16 @@ body.home .topbar-outer.dark {
 	height: 14px;
 }
 .mobilenav-button-container {
-	width: 20px;
+	position: absolute;
+	right: 0;
+	width: 40px;
 	height: 100%;
 	float: right;
 	display: none;
+
 }
 .mobilenav-button-inner {
-	width: 20px;
+	width: 100%;
 	display: table-cell;
 	height: 100%;
 	vertical-align: middle;
@@ -798,7 +801,7 @@ body.home .topbar-outer.dark {
 	width: 20px;
 	position: relative;
 	display: block;
-	height: 4px;
+	height: 3px;
 	-webkit-border-radius: 2px;
 	-moz-border-radius: 2px;
 	border-radius: 2px;
@@ -806,7 +809,7 @@ body.home .topbar-outer.dark {
 .mobilenav-button:before {
 	content: '';
 	width: 20px;
-	height: 4px;
+	height: 3px;
 	display: block;
 	position: absolute;
 	top: -6px;
@@ -818,7 +821,7 @@ body.home .topbar-outer.dark {
 .mobilenav-button:after {
 	content: '';
 	width: 20px;
-	height: 4px;
+	height: 3px;
 	position: absolute;
 	top: 6px;
 	left: 0;
@@ -3186,6 +3189,10 @@ i {
 /* Smartphones CSS
 /* --------------------------------------------------------------------------------- */
 @media only screen and (max-width: 767px) {
+	/* mcsc fix homepage */
+	.column-one-fourth, .column-one-half {
+		width: 100%;
+	}
 	body { /* --------------------- */
 		/* Stop iPhone increasing text size as it sees fit!
 		/* --------------------- */
